[package]
authors = ["Larry850806 <pudding850806@gmail.com>"]
edition = "2018"
name = "tv-robot"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-web = "4.3.0"
enigo = "0.0.14"
local-ip = "0.1.0"
mime_guess = "2.0.3"
qr2term = "0.3.1"
rust-embed = "6.4.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
